--- a/Drone Pilot/index.html
+++ b/Drone Pilot/index.html
@@ -70,44 +70,44 @@
             <div class="row align-items-start">
             <div class="col mb-5">
           <div class="card border border-2 border-secondary" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="..." class="card-img-top" alt="">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Booking</a>
+              <h5 class="card-title">Reza pahlevi</h5>
+              <p class="card-text">Pilot Drone Jakarta Timur<br>Start from 600.000 per battery</p>
+              <a href="#" class="btn btn-primary">Booking sekarang</a>
             </div>
           </div>
         </div>
 
         <div class="col">
           <div class="card border border-2 border-secondary" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="..." class="card-img-top" alt="">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Pesan Sekarang</a>
+              <h5 class="card-title">Sani aga kusuma</h5>
+              <p class="card-text">Pilot Drone Jakarta Selatan<br>Start from 600.000 per battery</p>
+              <a href="#" class="btn btn-primary">Booking sekarang</a>
             </div>
           </div>
         </div>
 
         <div class="col">
           <div class="card border border-2 border-secondary" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="..." class="card-img-top" alt="">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Alfiandi</h5>
+              <p class="card-text">Pilot Drone Jakarta Barat<br>Start from 600.000 per battery</p>
+              <a href="#" class="btn btn-primary">Booking sekarang</a>
             </div>
           </div>
         </div>
 
         <div class="col">
           <div class="card border border-2 border-secondary" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="..." class="card-img-top" alt="">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Rizkianto</h5>
+              <p class="card-text">Pilot Drone Bekasi<br>Start from 600.000 per battery</p>
+              <a href="#" class="btn btn-primary">Booking sekarang</a>
             </div>
           </div>
         </div>
@@ -116,44 +116,44 @@
       <div class="row align-items-start">   
         <div class="col mb-5">
         <div class="card border border-2 border-secondary" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="..." class="card-img-top" alt="">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">pattikawa pierre</h5>
+              <p class="card-text">Pilot Drone Bekasi<br>Start from 500.000 per battery</p>
+              <a href="#" class="btn btn-primary">Booking sekarang</a>
             </div>
           </div>
         </div>
         
         <div class="col">
           <div class="card border border-2 border-secondary" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="..." class="card-img-top" alt="">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Agung kurniawan</h5>
+              <p class="card-text">Pilot Drone Tangerang<br>Start from 500.000 per battery</p>
+              <a href="#" class="btn btn-primary">Booking sekarang</a>
             </div>
           </div>
         </div>
 
         <div class="col">
           <div class="card border border-2 border-secondary" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="..." class="card-img-top" alt="">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Yasin nur fadli</h5>
+              <p class="card-text">Pilot Drone Jakarta Utara<br>Start from 500.000 per battery</p>
+              <a href="#" class="btn btn-primary">Booking sekarang</a>
             </div>
           </div>
         </div>
 
           <div class="col">
           <div class="card border border-2 border-secondary" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="..." class="card-img-top" alt="">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Izal dronegraphy</h5>
+              <p class="card-text">Pilot Drone Bogor<br>Start from 500.000 per battery</p>
+              <a href="#" class="btn btn-primary">Booking sekarang</a>
             </div>
           </div>
         </div>
@@ -162,44 +162,44 @@
           <div class="row align-items-start">
           <div class="col mb-5">
           <div class="card border border-2 border-secondary" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="..." class="card-img-top" alt="">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Singgih aprianto</h5>
+              <p class="card-text">Pilot Drone Bogor<br>Start from 400.000 per battery</p>
+              <a href="#" class="btn btn-primary">Booking sekarang</a>
             </div>
           </div>
         </div>
      
           <div class="col">
           <div class="card border border-2 border-secondary" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="..." class="card-img-top" alt="">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Gilang pamungkas</h5>
+              <p class="card-text">Pilot Drone Tangerang<br>Start from 400.000 per battery</p>
+              <a href="#" class="btn btn-primary">Booking sekarang</a>
             </div>
           </div>
           </div>
 
           <div class="col">
           <div class="card border border-2 border-secondary" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="..." class="card-img-top" alt="">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Andrianto</h5>
+              <p class="card-text">Pilot Drone Bekasi<br>Start from 400.000 per battery</p>
+              <a href="#" class="btn btn-primary">Booking sekarang</a>
             </div>
           </div>
           </div>
 
           <div class="col">
           <div class="card border border-2 border-secondary" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="..." class="card-img-top" alt="">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Findi mustafa</h5>
+              <p class="card-text">Pilot Drone Bogor<br>Start from 400.000 per battery</p>
+              <a href="#" class="btn btn-primary">Booking sekarang</a>
             </div>
           </div>
         </div>
