--- a/Photographer/index.html
+++ b/Photographer/index.html
@@ -69,10 +69,10 @@
             <div class="row align-items-start">
             <div class="col mb-5">
           <div class="card border border-2 border-secondary" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="..." class="card-img-top" alt="">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h5 class="card-title">Oryza sativa</h5>
+              <p class="card-text">Photographer Depok<br>Start from 800.000 per day</p>
               <a href="#" class="btn btn-primary">Booking sekarang</a>
             </div>
           </div>
@@ -80,33 +80,33 @@
 
         <div class="col">
           <div class="card border border-2 border-secondary" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="..." class="card-img-top" alt="">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Robby herry</h5>
+              <p class="card-text">Photographer Jakarta Barat<br>Start from 800.000 per day</p>
+              <a href="#" class="btn btn-primary">Booking sekarang</a>
             </div>
           </div>
         </div>
 
         <div class="col">
           <div class="card border border-2 border-secondary" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="..." class="card-img-top" alt="">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Rezki zakiri</h5>
+              <p class="card-text">Photographer Jakarta Timur<br>Start from 800.000 per day</p>
+              <a href="#" class="btn btn-primary">Booking sekarang</a>
             </div>
           </div>
         </div>
 
         <div class="col">
           <div class="card border border-2 border-secondary" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="..." class="card-img-top" alt="">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Diah widyahlestari</h5>
+              <p class="card-text">Photographer Bekasi<br>Start from 800.000 per day</p>
+              <a href="#" class="btn btn-primary">Booking sekarang</a>
             </div>
           </div>
         </div>
@@ -115,44 +115,44 @@
       <div class="row align-items-start">   
         <div class="col mb-5">
         <div class="card border border-2 border-secondary" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="..." class="card-img-top" alt="">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Fairuz dyasano putri</h5>
+              <p class="card-text">Photographer Bekasi<br>Start from 700.000 per day</p>
+              <a href="#" class="btn btn-primary">Booking sekarang</a>
             </div>
           </div>
         </div>
         
         <div class="col">
           <div class="card border border-2 border-secondary" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="..." class="card-img-top" alt="">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Audyari</h5>
+              <p class="card-text">Photographer Jakarta Timur<br>Start from 700.000 per day</p>
+              <a href="#" class="btn btn-primary">Booking sekarang</a>
             </div>
           </div>
         </div>
 
         <div class="col">
           <div class="card border border-2 border-secondary" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="..." class="card-img-top" alt="">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Stevanus albert</h5>
+              <p class="card-text">Photographer Bogor<br>Start from 700.000 per day</p>
+              <a href="#" class="btn btn-primary">Booking sekarang</a>
             </div>
           </div>
         </div>
 
           <div class="col">
           <div class="card border border-2 border-secondary" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="..." class="card-img-top" alt="">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Budi suprapto</h5>
+              <p class="card-text">Photographer Tangerang<br>Start from 700.000 per day</p>
+              <a href="#" class="btn btn-primary">Booking sekarang</a>
             </div>
           </div>
         </div>
@@ -161,44 +161,44 @@
           <div class="row align-items-start">
           <div class="col mb-5">
           <div class="card border border-2 border-secondary" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="..." class="card-img-top" alt="">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Harsuyanti</h5>
+              <p class="card-text">Photographer Bekasi<br>Start from 600.000 per day</p>
+              <a href="#" class="btn btn-primary">Booking sekarang</a>
             </div>
           </div>
         </div>
      
           <div class="col">
           <div class="card border border-2 border-secondary" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="..." class="card-img-top" alt="">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Fajar antonio</h5>
+              <p class="card-text">Photographer Jakarta Barat<br>Start from 600.000 per day</p>
+              <a href="#" class="btn btn-primary">Booking sekarang</a>
             </div>
           </div>
           </div>
 
           <div class="col">
           <div class="card border border-2 border-secondary" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="..." class="card-img-top" alt="">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Eko kurniawan</h5>
+              <p class="card-text">Photographer Jakarta Timur<br>Start from 600.000 per day</p>
+              <a href="#" class="btn btn-primary">Booking sekarang</a>
             </div>
           </div>
           </div>
 
           <div class="col">
           <div class="card border border-2 border-secondary" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="..." class="card-img-top" alt="">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Abdullah wahab</h5>
+              <p class="card-text">Photographer Bogor<br>Start from 600.000 per day</p>
+              <a href="#" class="btn btn-primary">Booking sekarang</a>
             </div>
           </div>
         </div>
