--- a/Videographer/index.html
+++ b/Videographer/index.html
@@ -69,44 +69,44 @@
             <div class="row align-items-start">
             <div class="col mb-5">
           <div class="card border border-2 border-secondary" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="..." class="card-img-top" alt="">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Hanief pratama</h5>
+              <p class="card-text">Videographer Bekasi<br>Start from 1.300.000 per day</p>
+              <a href="#" class="btn btn-primary">Booking sekarang</a>
             </div>
           </div>
         </div>
 
         <div class="col">
           <div class="card border border-2 border-secondary" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="..." class="card-img-top" alt="">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Putra nasution</h5>
+              <p class="card-text">Videographer Jakarta Timur<br>Start from 1.300.000 per day</p>
+              <a href="#" class="btn btn-primary">Booking sekarang</a>
             </div>
           </div>
         </div>
 
         <div class="col">
           <div class="card border border-2 border-secondary" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="..." class="card-img-top" alt="">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Edi susanto</h5>
+              <p class="card-text">Videographer Bogor<br>Start from 1.300.000 per day</p>
+              <a href="#" class="btn btn-primary">Booking sekarang</a>
             </div>
           </div>
         </div>
 
         <div class="col">
           <div class="card border border-2 border-secondary" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="..." class="card-img-top" alt="">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Rosyid firdaus</h5>
+              <p class="card-text">Videographer Depok<br>Start from 1.300.000 per day</p>
+              <a href="#" class="btn btn-primary">Booking sekarang</a>
             </div>
           </div>
         </div>
@@ -115,44 +115,44 @@
       <div class="row align-items-start">   
         <div class="col mb-5">
         <div class="card border border-2 border-secondary" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="..." class="card-img-top" alt="">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Haryanto</h5>
+              <p class="card-text">Videographer Bekasi<br>Start from 1.200.000 per day</p>
+              <a href="#" class="btn btn-primary">Booking sekarang</a>
             </div>
           </div>
         </div>
         
         <div class="col">
           <div class="card border border-2 border-secondary" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="..." class="card-img-top" alt="">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">David kurniawan</h5>
+              <p class="card-text">Videographer Bogor<br>Start from 1.200.000 per day</p>
+              <a href="#" class="btn btn-primary">Booking sekarang</a>
             </div>
           </div>
         </div>
 
         <div class="col">
           <div class="card border border-2 border-secondary" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="..." class="card-img-top" alt="">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Fauzi tanjung</h5>
+              <p class="card-text">Videographer Jakarta Barat<br>Start from 1.200.000 per day</p>
+              <a href="#" class="btn btn-primary">Booking sekarang</a>
             </div>
           </div>
         </div>
 
           <div class="col">
           <div class="card border border-2 border-secondary" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="..." class="card-img-top" alt="">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Abial rahman</h5>
+              <p class="card-text">Videographer Jakarta Utara<br>Start from 1.200.000 per day</p>
+              <a href="#" class="btn btn-primary">Booking sekarang</a>
             </div>
           </div>
         </div>
@@ -161,44 +161,44 @@
           <div class="row align-items-start">
           <div class="col mb-5">
           <div class="card border border-2 border-secondary" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="..." class="card-img-top" alt="">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Wildan kurniawan</h5>
+              <p class="card-text">Videographer Bekasi<br>Start from 1.000.000 per day</p>
+              <a href="#" class="btn btn-primary">Booking sekarang</a>
             </div>
           </div>
         </div>
      
           <div class="col">
           <div class="card border border-2 border-secondary" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="..." class="card-img-top" alt="">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Anwar nasution</h5>
+              <p class="card-text">Videographer Depok<br>Start from 1.000.000 per day</p>
+              <a href="#" class="btn btn-primary">Booking sekarang</a>
             </div>
           </div>
           </div>
 
           <div class="col">
           <div class="card border border-2 border-secondary" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="..." class="card-img-top" alt="">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Seader purba</h5>
+              <p class="card-text">Videographer Tangerang<br>Start from 1.000.000 per day</p>
+              <a href="#" class="btn btn-primary">Booking sekarang</a>
             </div>
           </div>
           </div>
 
           <div class="col">
           <div class="card border border-2 border-secondary" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="..." class="card-img-top" alt="">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Hendrik situmorang</h5>
+              <p class="card-text">Videographer Bogor<br>Start from 1.000.000 per day</p>
+              <a href="#" class="btn btn-primary">Booking sekarang</a>
             </div>
           </div>
         </div>
